feat: API에 정보 추가